--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
-    <string name="facebook_app_id">1995623203835978</string> <string name="fb_login_protocol_scheme">fb1995623203835978</string>
+    <string name="facebook_app_id">1995623203835978</string>
+    <string name="fb_login_protocol_scheme">fb1995623203835978</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
